only add specified donors to katsu_donors
